Mais exercícios relacionado a imagens de fundo

--- a/Exercícios 022/fundo006.html
+++ b/Exercícios 022/fundo006.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+        body {
+            height: 100vh;
+            background-color: black;
+            background-image: url(Imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: scroll;
+        }
+        main {
+            background-color: white;
+            max-width: 400px;
+            padding: 10px;
+            margin: auto;
+            border: 1px solid darkblue;
+            border-radius: 15px;
+        }
+
+    </style>
+
 </head>
+
 <body>
-    
+    <main>
+        <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quos est non eius, inventore quis provident? Quidem possimus, pariatur dolores qui excepturi, libero tenetur nobis perspiciatis sint expedita atque ex! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores placeat aliquam voluptatibus debitis expedita nisi quam at animi illo eos quibusdam molestias, sit aperiam nesciunt voluptatem hic, quasi obcaecati voluptates? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At non voluptatibus illum numquam, hic aperiam sapiente explicabo quidem eum pariatur. Amet necessitatibus corporis, suscipit dolorum maiores vero exercitationem repudiandae rem.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quos est non eius, inventore quis provident? Quidem possimus, pariatur dolores qui excepturi, libero tenetur nobis perspiciatis sint expedita atque ex! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores placeat aliquam voluptatibus debitis expedita nisi quam at animi illo eos quibusdam molestias, sit aperiam nesciunt voluptatem hic, quasi obcaecati voluptates? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At non voluptatibus illum numquam, hic aperiam sapiente explicabo quidem eum pariatur. Amet necessitatibus corporis, suscipit dolorum maiores vero exercitationem repudiandae rem.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quos est non eius, inventore quis provident? Quidem possimus, pariatur dolores qui excepturi, libero tenetur nobis perspiciatis sint expedita atque ex! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores placeat aliquam voluptatibus debitis expedita nisi quam at animi illo eos quibusdam molestias, sit aperiam nesciunt voluptatem hic, quasi obcaecati voluptates? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At non voluptatibus illum numquam, hic aperiam sapiente explicabo quidem eum pariatur. Amet necessitatibus corporis, suscipit dolorum maiores vero exercitationem repudiandae rem.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit quos est non eius, inventore quis provident? Quidem possimus, pariatur dolores qui excepturi, libero tenetur nobis perspiciatis sint expedita atque ex! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores placeat aliquam voluptatibus debitis expedita nisi quam at animi illo eos quibusdam molestias, sit aperiam nesciunt voluptatem hic, quasi obcaecati voluptates? Lorem ipsum dolor, sit amet consectetur adipisicing elit. At non voluptatibus illum numquam, hic aperiam sapiente explicabo quidem eum pariatur. Amet necessitatibus corporis, suscipit dolorum maiores vero exercitationem repudiandae rem.</p>
+    </main>
 </body>
 </html>
